change folder names to lower case to fix images not showing on gh pages

--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -25,7 +25,6 @@ display: flex;
     font-size: 35px;
 }
 .about-me-container{
-    justify-content:flex-start;
     display: flex;
     flex-direction: row;
     width: 85%;
@@ -36,7 +35,7 @@ display: flex;
 }
 
 #about-me-image{
-    width: 300px;
+    width: 100%;
     height: 247px;
 margin-top: 10px;
 margin-right: 30px;
@@ -44,9 +43,12 @@ margin-right: 30px;
     border-radius: 5%;
 }
 
-#about-box{
-    width: 1030px;
+/* #about-box{
 }
+
+#about-me-image-box{
+    flex: 1;} */
+
 #other-containers{
     justify-content: center;
     display: flex;
